5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1674_1879.log
== TEST (2019-05-01 20:49:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=100):
	g = 100.0
	print("R$",round(g,2))
elif(c>400)
	g = 500.0
	print("R$",round(g,2))
-- ERROR:
File "XXXX", line 11
    elif(c>400)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:49:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=100):
	g = 100.0
	print("R$",round(g,2))
elif(c>400)
	g = 500.0
	print("R$",round(g,2))
-- EXECUTION TIME:
0.154707
-- ERROR:
  File "/home/codebench/codes/1674/1879/main.py", line 11
    elif(c>400)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:49:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=100):
	g = 100.0
	print("R$",round(g,2))
elif(c>400):
	g = 500.0
	print("R$",round(g,2))
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:50:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=100):
	g = 100.0
	print("R$",round(g,2))
elif(c>400):
	g = 500.0
	print("R$",round(g,2))
-- EXECUTION TIME:
0.147233
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:50:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=100):
	g = 100.0
	print("R$",round(g,2))
elif(c>400):
	g = 500.0
	print("R$",round(g,2))
-- EXECUTION TIME:
0.161755
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:50:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=100):
	g = 100.0
	print("R$",round(g,2))
elif(c>400):
	g = 500.0
	print("R$",round(g,2))
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:51:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=400):
	g = 100.0
	print("R$",round(g,2))
elif(c>400):
	g = 500.0
	print("R$",round(g,2))
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:51:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Quantidade de horas extras:"))
b = float(input("Quantidade de faltas:"))

print(a, " extras e ", b," de falta")
c = a - (1/4 * b)

if(c<=400):
	g = 100.0
	print("R$",round(g,2))
elif(c>400):
	g = 500.0
	print("R$",round(g,2))
-- EXECUTION TIME:
0.161328
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
